# OpencvOH-example

./: build-profile.json5  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/common/: common.cpp
entry/src/main/cpp/image_basic/: image2Gray.cpp
entry/src/main/cpp/include/: common.h  opencv_napi_api.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets  image2Gray.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
